api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    istio-injection: enabled
