api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
