api/k8s/api-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtual-service
spec:
  hosts:
    - "*"
#    - "myapp.example.com"
  gateways:
    - istio-system/istio-ingressgateway
  http:
#    - match:
#        - uri:
#            exact: /api
#      rewrite:
#        uri: "/"
#      route:
#        - destination:
#            host: api-service.api.svc.cluster.local
#            port:
#              number: 80
    - match:
        - uri:
            prefix: /api
#      rewrite:
#        uri: "/"
      route:
        - destination:
            host: api-service.api.svc.cluster.local
            port:
              number: 80
